规范程序集命名；

--- a/Editor/NovaEditor.Launcher.asmdef
+++ b/Editor/NovaEditor.Launcher.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "Nova.Launcher.Editor",
+    "name": "NovaEditor.Launcher",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [
